<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.mathquiz.MainActivity">

    <LinearLayout style="@style/VerticalLinearLayout">

        <LinearLayout style="@style/VerticalLinearLayout">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/first_question" />

            <EditText
                android:id="@+id/first_answer"
                style="@style/AnswerTextStyle"
                android:inputType="text" />

        </LinearLayout>

        <View style="@style/LineSeparation" />

        <LinearLayout style="@style/VerticalLinearLayout">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/second_question" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox1"
                    style="@style/CheckBoxOptions"
                    android:text="@string/checkbox1" />

                <CheckBox
                    android:id="@+id/checkbox2"
                    style="@style/CheckBoxOptions"
                    android:text="@string/checkbox2" />

                <CheckBox
                    android:id="@+id/checkbox3"
                    style="@style/CheckBoxOptions"
                    android:text="@string/checkbox3" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/LineSeparation" />

        <LinearLayout style="@style/VerticalLinearLayout">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/third_question" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton1"
                    style="@style/RadioButtonOptions"
                    android:text="@string/radioButton1" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    style="@style/RadioButtonOptions"
                    android:text="@string/radioButton2" />
            </RadioGroup>

        </LinearLayout>

        <View style="@style/LineSeparation" />

        <LinearLayout style="@style/VerticalLinearLayout">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/fourth_question" />

            <EditText
                android:id="@+id/fourth_answer"
                style="@style/AnswerTextStyle" />

        </LinearLayout>

        <View style="@style/LineSeparation" />

        <LinearLayout style="@style/VerticalLinearLayout">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/fifth_question" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton3"
                    style="@style/RadioButtonOptions"
                    android:text="@string/radioButton3" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    style="@style/RadioButtonOptions"
                    android:text="@string/radioButton4" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    style="@style/RadioButtonOptions"
                    android:text="@string/radioButton5" />
            </RadioGroup>

        </LinearLayout>

        <View style="@style/LineSeparation" />

        <LinearLayout style="@style/VerticalLinearLayout">

            <TextView
                style="@style/QuestionTextStyle"
                android:text="@string/sixth_question" />

            <EditText
                android:id="@+id/sixth_answer"
                style="@style/AnswerTextStyle" />

        </LinearLayout>

        <View style="@style/LineSeparation" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onSubmit"
            android:text="@string/submit_button" />

    </LinearLayout>
</ScrollView>
